# PAI

./: .gitignore  INTEGRATION_GUIDE.md  article.md  compare_methods.py  deep_models_unified.py  global.py  inception.py  inception_classifier.py  inception_pipeline.py  inception_predictor.py  inception_setup.py  integrated_dataset.csv  interface.py  interface2.py  main.py  patches_certos.txt  patches_certos_leo.txt  patient-clinical-data.csv  process.py  pyproject.toml  run_inception_training.py  run_pipeline.py  segmentation.py  test.py  train_inception.py  train_inception_v3_improved.py  xgboost_integration.py  xgboost_training.py
inception/: inception_pipeline.py  predict_inception.py  requirementx.txt  teste.py  train_inception.py  train_inception_v3_improved.py
interface/: interface.py
mobilenet/: __init__.py  mobilenet_pipeline.py  mobilenet_train.py
models/: xgboost_segmentation_model.pkl
readmes/: INCEPTION_V3_TRAINING_GUIDE.md
segmentation/: integrated_dataset_summary.txt  patches_certos.txt  segmentation.py  segmentation_deep_learning.py  stats_imagens.csv
setup/: check_environment.py
xgboost/: meu_xgboost.py  xgb_model.pkl  xgb_model_gtx1660.pkl  xgboost_integration.py  xgboost_training.py
